<resources>
    <string name="app_name">Grocery store</string>
    <string name="order_fresh_groceries_24_7_n_and_get_it_delivered_within_2_hours">Order fresh groceries 24/7 \n and get it delivered within 2 hours</string>
    <string name="grocery_store">GROCERY STORE</string>
    <string name="sign_in">sign in</string>
    <string name="sign_up">sign up</string>
    <string name="logo">logo</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_password">Enter password</string>
    <string name="authenticate_phone_number">Authenticate phone number</string>
    <string name="enter_otp_here">Enter OTP here</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="your_profile">Your profile</string>
    <string name="sign_out">Sign out</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="update_details">update details</string>
    <string name="enter_groceries_here">Enter groceries here</string>
    <string name="card_view_images_one">card_view_images_one</string>
    <string name="long_press_on_any_item_to_add_to_cart">Long press on any item to add to cart</string>
    <string name="trending_items">Trending items</string>
    <string name="cart">Cart</string>
    <string name="add">add</string>
    <string name="_1">1</string>
    <string name="minus">minus</string>
    <string name="place_order">place order</string>
    <string name="done">done</string>
    <string name="order_more">Order more</string>
    <string name="no_products_available_go_back_and_add_some">No products available! Go back and add some</string>
    <string name="total_amount">TOTAL AMOUNT:</string>
    <string name="pay_using_upi">pay using upi</string>
    <string name="pay_using_upi_for_faster_payments_and_rewards">pay using upi for faster payments and rewards</string>
    <string name="product_name_product_price_product_quantity">Product_name : Product_Price * Product_quantity</string>
    <string name="categories">Categories</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="tap_on_address_a_few_times_to_get_the_address_to_be_displayed">Tap on address a few times to get the address to be displayed</string>
</resources>