<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_splash_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        tools:context=".activities.SignUpActivity">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name_sign_up_activity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_name" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email_sign_up_activity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_email" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_mobile_sign_up_activity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_phone_number"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_password_layout_sign_up_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:visibility="gone"
            tools:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password_sign_up_activity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/tap_on_address_a_few_times_to_get_the_address_to_be_displayed"
            android:textAlignment="center" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_your_address" />

        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/et_otp_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:autofillHints="CODE"
            android:hint="@string/enter_otp_here"
            android:inputType="numberDecimal"
            android:visibility="gone"
            tools:visibility="visible" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_up_sign_up_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@drawable/btn_gradient"
            android:text="@string/authenticate_phone_number" />


    </LinearLayout>

</ScrollView>