<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PaymentActivity"
    android:orientation="vertical"
    android:padding="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/total_amount"
            android:textSize="20sp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/tv_total_amount"
            android:layout_width="0dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_height="match_parent"
            android:layout_weight="0.5" />

    </LinearLayout>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:text="@string/product_name_product_price_product_quantity"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tv_product_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:text="@string/pay_using_upi_for_faster_payments_and_rewards"/>

    <Button
        android:id="@+id/btn_pay_upi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/pay_using_upi"/>

</LinearLayout>