<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="200dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_cart_activity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:contentDescription="@string/card_view_images_one"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_name_cart_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Name"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/ib_add_cart_activity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_add_24"
                        android:layout_weight="0.33"
                        android:contentDescription="@string/add" />

                    <TextView
                        android:id="@+id/tv_quantity_cart_activity"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.33"
                        android:textSize="20sp"
                        android:textAlignment="center"/>

                    <ImageButton
                        android:id="@+id/ib_minus_cart_activity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_minus_24"
                        android:layout_weight="0.33"
                        android:contentDescription="@string/minus" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>